# packages-synchronizer

./: .gitignore  Cargo.toml
assets/groups/: arch.toml  aur.toml  cargo_install.toml  dotnet_tools.toml  flatpak.toml  go_tools.toml  ollama.toml  vscode_extensions.toml
src/: main.rs
src/cli/: mod.rs  subcommands.rs
src/config/: mod.rs
src/runner/: mod.rs
