[package]
name = "packages-synchronizer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap_complete = "4.5.33"
cmd_lib = "1.9.5"
serde = { version = "1.0.213", features = ["derive"] }
toml = { version = "0.8.19", features = ["preserve_order"] }
indexmap = { version = "2.4.0", features = ["serde"] }
walkdir = "2.5.0"

[dependencies.clap]
version = "4.4.18"
default-features = false
features = [
    "std", "help", "usage", "error-context", "suggestions", # default excluding "color"
    "cargo", "env", "derive"                                # optional
]

[dev-dependencies]
goldie = "0.5.0"
pretty_assertions = "1.4.0"
tempfile = "3.12.0"
